<resources>
    <string name="app_name">Control G</string>


    <!-- 000WebHost -->
    <string name="s_ip_000webhost">https://restauranteudea.000webhostapp.com</string>


    <!-- Strings Web services -->
    <string name="s_web_insert_full">Insert full</string>
    <string name="s_web_loading">Loading...</string>
    <string name="s_web_not_register">Could not register</string>
    <string name="s_web_not_query">The query could not be</string>
    <string name="s_web_not_photo">Error when loading the image</string>
    <string name="s_web_not_conexion">No internet connection</string>
    <string name="s_web_syncronizar">Update food-drinks</string>


    <!-- Strings Activity Usuario-->
    <string name="s_name_user">Name</string>
    <string name="s_email_user">Email</string>
    <string name="s_register_user">Register</string>
    <string name="s_create_Account">Create Account</string>
    <string name="s_user_update">Register update </string>

    <!-- Strings Fragment Configuration-->
    <string name="s_name_loguin">Name</string>
    <string name="s_pass_loguin">Pass</string>
    <string name="s_entrar_loguin">Enter</string>
    <string name="s_edit_profile">Edit Profile</string>
    <string name="s_authorization_notification">Authorization Notification</string>
    <string name="s_sound_notification">Sound Notification</string>
    <string name="s_keep_session">Keep Session</string>
    <string name="s_notification">Notification</string>

    <string name="s_welcome">Welcome</string>
    <string name="title_activity_navigation_drawer">Servicios</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Control G</string>
    <string name="nav_header_subtitle">udea.edu.co</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Strings related to Menu -->
    <string name="s_menu">Menu</string>
    <string name="s_inventory">Inventory</string>
    <string name="s_breeding">Breeding</string>
    <string name="s_diary">Diary</string>
    <string name="s_product">Product</string>


    <!-- Strings Activity Menu - Navigation_drawer.xml -->
    <string name="s_close">close</string>
    <string name="s_option">Optiones</string>


</resources>
