<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".UsuarioAtivity">

    <ImageView
        android:id="@+id/imgPhotoUser"
        android:layout_width="120dp"
        android:layout_height="101dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:onClick="onClick"
        android:src="@drawable/user" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/ediNameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="15"
                android:hint="@string/s_name_user"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/ediEmailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="10"
                android:hint="@string/s_email_user"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/ediPasswordUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="10"
                android:hint="@string/s_pass_loguin"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="268dp"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/butRegistrarUser"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:onClick="onClick"
                android:text="@string/s_register_user"
                android:textColor="@android:color/background_light" />
        </TableRow>
    </TableLayout>
</LinearLayout>