<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <TableRow
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="241dp"
                android:layout_height="141dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/login" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/ediName_loguin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:hint="@string/s_name_loguin"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/ediPass_loguin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:hint="@string/s_pass_loguin"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/butLoguin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/s_entrar_loguin"
                android:layout_marginTop="16dp"
                android:background="@color/accent_material_light_1"
                android:textColor="@android:color/background_light"/>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:gravity="center">


            <TextView
                android:id="@+id/txtCreateUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onCreateClick"
                android:text="@string/s_create_Account"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="5dp"
                android:layout_height="10dp"
                android:scaleType="fitCenter"
                android:visibility="invisible"
                app:srcCompat="@drawable/user" />
        </TableRow>


    </TableLayout>



</LinearLayout>